Реализовано добавление контакта в группу